force-app/main/default/objects/VBOT_Asset_Telemetry__c/VBOT_Asset_Telemetry__c.object-meta.xml
<CustomObject>
    <description>Time-series telemetry rows pushed from the customer's mobile app for a single VerdantBot asset. Drives the Connected Asset tab (battery curve, usage timeline, lawn health map) in Use Case 3.</description>
    <label>Asset Telemetry</label>
    <nameField>
        <displayFormat>TEL-{0000}</displayFormat>
        <label>Telemetry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Telemetry Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>