force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Asset__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Asset__c</fullName>
    <label>Asset</label>
    <description>Master-detail link to the Asset this telemetry row belongs to. Cascades delete.</description>
    <inlineHelpText>The asset that emitted this telemetry sample.</inlineHelpText>
    <type>MasterDetail</type>
    <referenceTo>Asset</referenceTo>
    <relationshipName>VBOT_Telemetry_Records</relationshipName>
    <relationshipLabel>Asset Telemetry</relationshipLabel>
</CustomField>