force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Battery_Health_Pct__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Battery_Health_Pct__c</fullName>
    <label>Battery Health (%)</label>
    <description>Battery health for this sample. Forms the battery degradation curve on the Connected Asset tab.</description>
    <inlineHelpText>0 - 100 % battery health at sample time.</inlineHelpText>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>