force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Error_Count__c</fullName>
    <label>Error Count</label>
    <description>Number of errors emitted by the device during this sample's interval. Spikes feed the predictive maintenance card.</description>
    <inlineHelpText>Number of error events in this sample window. Usually 0.</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>