force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_External_Id__c.field-meta.xml
<CustomField>
    <fullName>VBOT_External_Id__c</fullName>
    <label>External Id</label>
    <description>Idempotency key for the seed script. Pattern: TEL-{assetId}-{yyyyMMdd}. Lets the seed Apex upsert telemetry without producing duplicates.</description>
    <inlineHelpText>Used by the seed script to upsert telemetry idempotently. Do not edit manually.</inlineHelpText>
    <type>Text</type>
    <length>40</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>