force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <description>Firmware version the asset was running when this sample was recorded. Helps correlate firmware rollouts with telemetry deltas.</description>
    <inlineHelpText>Semantic firmware version active at sample time, e.g. "3.4.1".</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>