force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Lawn_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Lawn_Health_Score__c</fullName>
    <label>Lawn Health Score</label>
    <description>Composite lawn-health score (0-100) computed by the device from grass color, density and growth-rate sensors. Drives the lawn-health map heatmap.</description>
    <inlineHelpText>0 - 100. Higher is better.</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>