force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Mowed_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Mowed_Area_Sqm__c</fullName>
    <label>Mowed Area (sqm)</label>
    <description>Lawn area mowed during this sample's interval (m²). Aggregated into the usage timeline chart.</description>
    <inlineHelpText>Area mowed in this sample window (m²).</inlineHelpText>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>