force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Operating_Hours__c</fullName>
    <label>Operating Hours</label>
    <description>Operating hours accumulated in this sample's interval. Used for the usage timeline and predictive maintenance hints.</description>
    <inlineHelpText>Hours of active mowing in this sample window.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>