force-app/main/default/objects/VBOT_Asset_Telemetry__c/fields/VBOT_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Timestamp__c</fullName>
    <label>Timestamp</label>
    <description>UTC timestamp when this telemetry sample was recorded on the device.</description>
    <inlineHelpText>Device-side recording timestamp for this telemetry sample.</inlineHelpText>
    <type>DateTime</type>
    <required>true</required>
</CustomField>